--- a/css/index.css
+++ b/css/index.css
@@ -54,7 +54,7 @@ body {
 }
 
 @media only screen and (max-width: 800px){
-   .footer-col-2 .footer-col-3 {
+   .footer-col-3 {
         width: calc(65% - (40px / 2));
         padding-left: 15px;
     }
